--- a/Pro_Spring/src/main/resources/application.properties
+++ b/Pro_Spring/src/main/resources/application.properties
@@ -8,3 +8,8 @@ paxos.peers[4]=localhost:8004
 paxos.peers[5]=localhost:8005
 paxos.peers[6]=localhost:8006
 paxos.peers[7]=localhost:8007
+
+
+server.port=8000
+paxos.id=0
+paxos.leaderPort=8000
