--- a/paxos-gui/pom.xml
+++ b/paxos-gui/pom.xml
@@ -44,6 +44,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>6.0.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
